Possibility to download MySQL for projects
[+]  Added MySQL 8.1.0 download link for Venezuelan users for liberal block projects

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
  
     </div>
 
+<div class="box-update">
+    <div class="box-add">
 
+        <a href="https://www.mediafire.com/file/iuhqswiuas43tuc/mysql-8.1.0-winx64.msi/file"> MySQLr - 8.1.0 Update Latam acces</a>
+ 
+    </div>
 </div>
 </div>
 
